# minfern

./: .gitignore  Cargo.toml  README.md  app.js  check_proofs.sh  declare.md  index.html  infernu.md  missing-builtins.md  styles.css
.github/workflows/: coq.yml
examples/modules/: app.js  format.js  store.js
examples/spa/: app.js  gaps.md  index.html
formal/: FormalJSTypes.lean  PLAN.md  README.md  ROADMAP.md  lake-manifest.json  lakefile.toml  lean-toolchain
formal/FormalJSTypes/: Semantics.lean  Soundness.lean  Syntax.lean  Typing.lean
formal/coq/: Makefile  _CoqProject
formal/coq/theories/: Classes.v  Completeness.v  Equivalence.v  Heap.v  Inference.v  Levels.v  (+6 more)
pkg/: README.md  minfern.d.ts  minfern.js  minfern_bg.wasm  minfern_bg.wasm.d.ts  package.json
src/: diagnostics.rs  error.rs  lib.rs  main.rs  modules.rs  stdlib.rs  wasm.rs
src/builtins/: mod.rs
src/infer/: decorate.rs  env.rs  infer.rs  mod.rs  state.rs  type_parser.rs  unify.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/parser/: ast.rs  mod.rs  pretty.rs  proptests.rs
src/types/: mod.rs  pretty.rs  subst.rs  ty.rs
stdlib/: core.d.js  dom.d.js
tests/: example_error.js  mandelbrot.js  metamorphic.proptest-regressions  metamorphic.rs  test_array_length.js  test_builder_pattern.js  test_closure.js  test_equirecursive.js  test_field_annotations.js  test_polymorphism.js  test_promise.js  test_structural.js  test_this_methods.js  test_this_unit.js
tests/metamorphic/: ast.rs  oracle.rs  strategy.rs  transform.rs
web/: app.js  build.sh  deploy-gh-pages.sh  index.html  styles.css
